dojo-4-docker/solutions/meen/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "nginx-service"
  namespace: "default"
  labels:
    app: "nginx"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: "nginx"
  type: "NodePort"
