dojo-4-docker/solutions/meen/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "nginx-ngx-svc-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx.loc
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
